<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">车辆守护</string>
    <string name="menu_settings">Settings</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="userNameHint">车牌号/手机号码</string>
    <string name="keepPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>
    
    <string name="location">定位跟踪</string>
    <string name="onlineShop">在线商店</string>
    <string name="msgBox">消息信箱</string>
    <string name="personalCenter">个人中心</string>

</resources>