<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#BADBEA"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />
    
    <LinearLayout
        android:id="@+id/memberArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/userNameInput"
            style="@style/LineEditText"
            android:hint="@string/userNameHint"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordInput"
            style="@style/LineEditText"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/keepPasswordCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox"
            android:text="@string/keepPassword" />

        <CheckBox
            android:id="@+id/autoLoginCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:button="@drawable/checkbox"
            android:text="@string/autoLogin" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/login_btn"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18dp" />

</LinearLayout>